--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,9 @@
 }
 
 .btn {
- @apply block w-fit bg-aro-800 text-white font-semibold py-2 px-4 rounded-md shadow-sm hover:bg-aro-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-aro-200 transition duration-150 ease-in-out;
+ @apply inline-block w-fit bg-aro-800 text-white font-semibold py-2 px-4 rounded-md shadow-sm hover:bg-aro-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-aro-200 transition duration-150 ease-in-out;
+}
+
+hr {
+  @apply my-4
 }
